google signin and DB update

--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
 GOOGLE_ID= 722581934167-if788f98pj2l3gffvanlqj2mc55msse2.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET = 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
-MONGODB_URI = mongodb+srv://kumail:<6J6PyZhZK7jyHT6z>@cluster0.fi9wb20.mongodb.net/?retryWrites=true&w=majority
+MONGODB_URI = mongodb+srv://kumail:Rendering14@cluster0.fi9wb20.mongodb.net/?retryWrites=true&w=majority
+NEXTAUTH_URL = http://localhost:3000
+NEXTAUTH_URL_INTERNAL = http://localhost:3000
+NEXTAUTH_SECRET = fEc4TVdNTZnUHMMWii0aWOZs8cV9YA1iTlHbdGmhndQ=
